2008-12-27  Per Bothner  <per@bothner.com>

	* TryExp.java (compile): Various tweaks to handle StackMapTable.
	* BlockExp.java: Re-write to use ExitableBlock.
	* ExitExp.java: Likewise.
	* FluidLetExp.java: Minor tweak to enable an optimization.
	* LambdaExp.java (enterFunction): Use new noteStartFunction method.
	* IfExp.java (compile): Update for ExitExp changes.
	* Compilation.java (defaultClassFileVersion): Change to
	ClassType.JDK_1_6_VERSION if JAVA6 is selected.
	(generateMatchMethods): Need to explicitly note type-state for loop.
	* Declaration.java (load): Update for exception handling changes.
	* CheckedTarget.java (emitCheckedCoerce): Likewise.

	* LambdaExp.java (enterFunction): Use new emitArrayLoad variant.

	* LambdaExp.java (compile): Commment out bit-rotted and never-finished
	usingCPStyle support.

2008-12-23  Per Bothner  <per@bothner.com>

	* Compilation.java (generateApplyMethodsWithContext,
	generateApplyMethodsWithoutContext): Skip a 'this' parameter.

2008-11-18  Per Bothner  <per@bothner.com>

	* PrimProcedure.java (isAppicable): For Java5-style VARARGS
	allow last argument as an array *or* an argument list.
	(compileArgs): Likewise improved VARARGS handling.

	* LitTable.java (emit): Handle array Class objects.

2008-11-16  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalToClass): Use ObjectType.getContextClassLoader.

2008-11-13  Per Bothner  <per@bothner.com>

	* SetExp.java (canUseInc): New static method, to check if we
	can use the iinc instruction.
	(BAD_SHORT): New constant.
	(compile): Use canUseInc; if OK, do emitInc.
	* ApplyExp.java (compile):  If tail-recursing increments a parameter
	variable, try to use the 'iinc' instruction.  This requires ...
	(pushArgs, popParams): hanges, so we can maybe emit iinc.
	* ReferenceExp.java (valueIfConstant): New method.

2008-10-26  Per Bothner  <per@bothner.com>

	* Expression.java (isSingleValue): New method.
	* ReferenceExp.java (isSingleValue): New method.
