@@ -197,7 +197,8 @@ inlining.log: InliningTest.class cycle1.class cycle2.class Makefile
 	$(JAVA) gnu.bytecode.ListCodeSize InliningTest.class \
 	setCar getHome setHome isPair isEmpty castToPair newPair tohex \
 	makeIarr lengthIarr getIarr setIarr varargs \
-	factoriali1 factoriali2 factoriall1 plusLambda1>inlining.log
+	factoriali1 factoriali2 factoriall1 \
+	plusLambda1 firstNegative >inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
 	$(JAVA) gnu.bytecode.ListCodeSize cycle1.class isIsEven >>inlining.log
 	CLASSPATH=..:@conf_classpath@.:$$CLASSPATH \
