@@ -1,3 +1,9 @@
+2008-12-29  Per Bothner  <per@bothner.com>
+
+	* testsuite/inlining-test.scm (first-negative): New test for
+	inlineable call-with-current-continuation.
+	(inlining.expected, Makefile.am):: Update accordingly.
+
 2008-12-10  Per Bothner  <per@bothner.com>
 
 	* misc-test.scm: Add tests for exit (using call/cc) though
