@@ -1,3 +1,9 @@
+2008-12-29  Per Bothner  <per@bothner.com>
+
+	* TryExp.java (getFinallyClause): New accessor method.
+	* ExpWalker.java (exitValue): Make protected.
+	(getExitValue): New accessor method.
+
 2008-12-27  Per Bothner  <per@bothner.com>
 
 	* TryExp.java (compile): Various tweaks to handle StackMapTable.
